# Obstacle-avoidance-uisng-Ros-and-YUMi

./: README.md  SYS.cfg
ROS_Yumi/: Readme.odt
ROS_Yumi/ROS/: ROS_motion_right.mod  ROS_socket.sys  ROS_stateServer_right.mod
obstacle avoidance backup/Yumi_6.04.xx_BACKUP_2016-09-29_obstacle_avoidance_working/BACKINFO/: controller.rsf  key.id  program.id  template.guid
obstacle avoidance backup/Yumi_6.04.xx_BACKUP_2016-09-29_obstacle_avoidance_working/HOME/: Check_Leadthrough_State.mod  Check_Leadthrough_State.pgf  Check_Leadthrough_State_L.mod  Check_Leadthrough_State_L.pgf  Check_Leadthrough_State_R.mod  Check_Leadthrough_State_R.pgf  DanceL.mod  DanceR.mod  Leadthrough_L.mod  Leadthrough_L.pgf  Leadthrough_R.mod  Leadthrough_R.pgf  LeftDance.pgf  Program01.pgf  RightDance.pgf  collide_with_body.pgf  collision_between_arms_L.mod  collision_between_arms_L.pgf  hackathon_demo.py  moveC_z200.mod  moveC_z200.pgf  moveL_fine.mod  moveL_fine.pgf  move_elbow_at_max_speed.mod  move_elbow_at_max_speed.pgf  move_hand_at_max_speed.mod  move_hand_at_max_speed.pgf
obstacle avoidance backup/stripped_down_Yumi_6.04.xx_BACKUP_2016-09-29_obstacle_avoidance_working - Copy/: system.xml
ws/devel/: .catkin  .rosinstall  setup.sh
ws/devel/lib/pkgconfig/: freenect_camera.pc  pysdf.pc  (+12 more)
ws/install/: .rosinstall
ws/install/share/yumi_gazebo/: package.xml
ws/install/share/yumi_gazebo/cmake/: yumi_gazeboConfig.cmake
ws/install/share/yumi_gazebo/config/: yumi_control.yaml
ws/install/share/yumi_gazebo/launch/: test1.launch  test1.launch~  yumitest.launch  yumitest.launch~
(+63 files in other folders)
